styles.css
html {
    overscroll-behavior: none;
    user-select: none;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    -webkit-text-size-adjust: 100%;
    -moz-text-size-adjust: 100%;
    -ms-text-size-adjust: 100%;
    text-size-adjust: 100%;
}

body {
    font-family: Roboto, Arial, sans-serif;
    margin: 0;
    padding: 0;
    line-height: 1.6;
    overflow-x: hidden;
    overscroll-behavior: none;
}

main {
    padding-top: 3rem;
}

.wrapper {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    min-width: fit-content;
}

header {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 1000;
    background: #168B52;
    color: white;
    text-align: center;
}

.download-buttons {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
}

.download-item {
    text-align: center;
}

.btn {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    color: white;
    text-decoration: none;
    border-radius: 5px;
    min-height: 9rem;
    min-width: 12rem;
}

.app-store img {
    padding-top: 0.7rem;
    padding-bottom: 0.8rem;
    height: 3rem;
    min-width: fit-content;
}

.google-play img {
    padding-top: 0.7rem;
    padding-bottom: 0.8rem;
    height: 3rem;
}

.container {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    padding-right: 1rem;
}

.logo {
    width: 8rem;
    height: auto;
}

.language-switcher {
    list-style: none;
    padding: 0;
    display: flex;
    gap: 1rem;
}

.language-switcher li a {
    text-decoration: none;
    color: white;
}

.flex-container {
    display: flex;
    flex-direction: column;
    gap: 1.5rem;
}

.gallery,
.intro {
    text-align: center;
}

.qr-code img {
    width: 8rem;
    height: auto;
    border-radius: 10px;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
}

.hero {
    text-align: center;
    background: #168B52;
    color: white;
    padding-bottom: 3rem;
    padding-top: 1.7rem;
    width: auto;
}

.hero h1 {
    margin: 0;
    font-size: 3.2rem;
}

.hero h2 {
    margin: 0;
}

.gallery {
    text-align: center;
    padding-top: 4rem;
}

.gallery h2 {
    margin-bottom: 1rem;
}

.gallery-container {
    position: relative;
    width: 300px;
    margin: 0 auto;
}

.screenshots {
    display: flex;
    transition: transform 0.5s ease;
}

.screenshots img {
    min-width: 300px;
    border-radius: 10px;
    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
    border-width: 2px;
    border-style: solid;
    box-sizing: border-box;
    border-color: silver;
    display: none;
}

.screenshots img.active {
    display: block;
}

.dots {
    text-align: center;
    margin-top: 10px;
}

.dot {
    display: inline-block;
    width: 10px;
    height: 10px;
    margin: 0 5px;
    background-color: #ccc;
    border-radius: 50%;
    cursor: pointer;
}

.dot.active {
    background-color: #F66A29
}

.intro {
    text-align: center;
    margin-top: 0rem;
    padding-top: 0rem;
    margin-bottom: 5rem;
    padding-left: 2rem;
    padding-right: 2rem;
}

.intro h2 {
    margin-bottom: 1rem;
}

.intro ul {
    list-style: none;
    padding: 0;
    font-size: 1rem;
}

.intro ul li {
    font-size: 1rem;
    margin: 0.5rem 0;
}

footer {
    background: silver;
    color: grey;
    padding-top: 1rem;
    padding-bottom: 1rem;
    text-align: center;
    position: fixed;
    bottom: -100%;
    left: 0;
    width: 100%;
    font-size: 0.9rem;
    transition: bottom 0.3s ease;
}

footer span {
    margin-left: 0.8rem;
    margin-right: 0.8rem;
}

footer a:visited {
    color: grey
}

footer a {
    color: grey;
}

footer.show {
    bottom: 0;
}

.play-pause-overlay {
    position: absolute;
    cursor: pointer;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 100px;
    height: 100px;
    border-radius: 50%;
    background: rgba(0, 0, 0, 0.5);
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
    z-index: 10;
    pointer-events: none;
    transition: opacity 0.3s ease;
}

.play-pause-overlay span {
    display: flex;
    align-items: center;
    justify-content: center;
}

.play-pause-overlay svg {
    width: 100%;
    height: 100%;
    object-fit: contain;
}

.play-pause-overlay.pause {
    background: rgba(0, 0, 0, 0.2);
}

.play-pause-overlay.play {
    background: rgba(0, 0, 0, 0.2);
}

@media (min-width: 768px) {
    .download-buttons {
        gap: 4rem;
    }

    .intro {
        padding-top: 3rem;
        margin: 0;
        padding-left: 3rem;
        padding-right: 1.8rem;
        order: 1;
        text-align: left;
    }

    .gallery {
        order: 2;
        padding-right: 3.3rem;
    }

    .flex-container {
        flex-direction: row;
        justify-content: center;
    }

    .gallery,
    .intro {
        flex: 0 1 auto;
        margin: 0;
        padding-bottom: 6rem
    }

    /* body {
        -webkit-text-size-adjust: none;
    } */
}

